# Nova-Chip8

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
docs/: 00-overview.md  app_flow.md  architecture.md
src/: app.rs  constants.rs  cpu.rs  display.rs  fonts.rs  gamepad.rs  i18n.rs  keypad.rs  main.rs  memory.rs  types.rs  utils.rs
src/i18n/: ar.json  de.json  en.json  es.json  fr.json  hi.json  it.json  ja.json  ko.json  pt.json  ru.json  zh.json
src/ui/: bottom_bar.rs  debug_terminal.rs  main_panel.rs  mod.rs  settings.rs  top_bar.rs
