[package]
name = "Nova"
version = "0.10.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
rand = "0.8"
once_cell = "1.21.3"
serde_json = "1"
rfd = "0.15"
gilrs = "0.10"
windows-sys = { version = "0.60", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Diagnostics_Debug", "Win32_System_Threading"] }





